Added div for query results

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <i class="fa fa-newspaper-o"></i>&nbsp;New York Times Search</h1>
     </div>
     <div class="container">
-        <div class="card">
+        <div class="card mb-5">
             <div class="card-header">
                 Search Parameters
             </div>
@@ -50,6 +50,14 @@
                     <button id="clearBtn" type="submit" class="btn btn-primary">Clear Results</button>
 
                 </form>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header">
+                Top Articles
+            </div>
+            <div class="card-body" id="queryResults">
+
             </div>
         </div>
     </div>
