--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <form>
                     <div class="form-group">
                         <label for="searchTerm">Search Term:</label>
-                        <input type="text" class="form-control" id="searchTerm">
+                        <input type="text" class="form-control" id="searchTerm" required />
                     </div>
                     <div class="form-group">
                         <label for="numberRecords">Number of Records to Retrieve:</label>
@@ -47,7 +47,7 @@
                         <input type="text" class="form-control" id="endYear">
                     </div>
                     <button id="searchBtn" type="submit" class="btn btn-primary">Search</button>
-                    <button id="clearBtn" type="submit" class="btn btn-primary">Clear Results</button>
+                    <button id="clearBtn" class="btn btn-primary">Clear Results</button>
 
                 </form>
             </div>
