Added bells and whistles

--- a/index.html
+++ b/index.html
@@ -12,18 +12,20 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
-    <div class="jumbotron text-center">
+    <div class="jumbotron text-center animated fadeInDown">
         <h1 class="display-3">
             <i class="fa fa-newspaper-o"></i>&nbsp;New York Times Search</h1>
     </div>
-    <div class="container">
+    <div class="container animated fadeInUp">
         <div class="card mb-5">
             <div class="card-header">
-                <i class="fa fa-list-alt"></i>&nbsp;Search Parameters
+                <span class="lead">
+                    <i class="fa fa-list-alt"></i>&nbsp;&nbsp;Search Parameters</span>
             </div>
             <div class="card-body">
                 <form>
@@ -57,7 +59,8 @@
         </div>
         <div class="card">
             <div class="card-header">
-                <i class="fa fa-table"></i>&nbsp;Top Articles
+                <span class="lead">
+                    <i class="fa fa-table"></i>&nbsp;&nbsp;Top Articles</span>
             </div>
             <div class="card-body" id="queryResults">
 
