--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </form>
             </div>
         </div>
-        <div class="card">
+        <div class="card mb-5">
             <div class="card-header">
                 <span class="lead">
                     <i class="fa fa-table"></i>&nbsp;&nbsp;Top Articles</span>
