--- a/index.html
+++ b/index.html
@@ -21,51 +21,60 @@
         <h1 class="display-3">
             <i class="fa fa-newspaper-o"></i>&nbsp;New York Times Search</h1>
     </div>
-    <div class="container animated fadeInUp">
-        <div class="card mb-5">
-            <div class="card-header">
-                <span class="lead">
-                    <i class="fa fa-list-alt"></i>&nbsp;&nbsp;Search Parameters</span>
+    <div class="container-fluid animated fadeInUp">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card mb-5">
+                    <div class="card-header">
+                        <span class="lead">
+                            <i class="fa fa-list-alt"></i>&nbsp;&nbsp;Search Parameters</span>
+                    </div>
+                    <div class="card-body animated">
+                        <form>
+                            <div class="form-group">
+                                <label for="searchTerm">Search Term:</label>
+                                <input type="text" class="form-control" id="searchTerm" required />
+                            </div>
+                            <div class="form-group">
+                                <label for="numberRecords">Number of Records to Retrieve:</label>
+                                <select class="custom-select form-control" id="numberRecords">
+                                    <option value="1">1</option>
+                                    <option value="5" selected>5</option>
+                                    <option value="10">10</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label for="startYear">Start Year (Optional):</label>
+                                <input type="text" class="form-control" id="startYear">
+                            </div>
+                            <div class="form-group">
+                                <label for="endYear">End Year (Optional):</label>
+                                <input type="text" class="form-control" id="endYear">
+                            </div>
+                            <div class="text-center">
+                                <button id="searchBtn" type="submit" class="btn btn-primary">
+                                    <i class="fa fa-search"></i>&nbsp;Search</button>
+                                <button id="clearBtn" class="btn btn-primary">
+                                    <i class="fa fa-trash"></i>&nbsp;Clear Results</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
-            <div class="card-body">
-                <form>
-                    <div class="form-group">
-                        <label for="searchTerm">Search Term:</label>
-                        <input type="text" class="form-control" id="searchTerm" required />
+            <div class="col-md-6 animated">
+                <div class="card mb-5">
+                    <div class="card-header">
+                        <span class="lead">
+                            <i class="fa fa-table"></i>&nbsp;&nbsp;Top Articles</span>
                     </div>
-                    <div class="form-group">
-                        <label for="numberRecords">Number of Records to Retrieve:</label>
-                        <select class="custom-select form-control" id="numberRecords">
-                            <option value="1">1</option>
-                            <option value="5" selected>5</option>
-                            <option value="10">10</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="startYear">Start Year (Optional):</label>
-                        <input type="text" class="form-control" id="startYear">
-                    </div>
-                    <div class="form-group">
-                        <label for="endYear">End Year (Optional):</label>
-                        <input type="text" class="form-control" id="endYear">
-                    </div>
-                    <button id="searchBtn" type="submit" class="btn btn-primary">
-                        <i class="fa fa-search"></i>&nbsp;Search</button>
-                    <button id="clearBtn" class="btn btn-primary">
-                        <i class="fa fa-trash"></i>&nbsp;Clear Results</button>
+                    <div class="card-body" id="queryResults">
 
-                </form>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="card mb-5">
-            <div class="card-header">
-                <span class="lead">
-                    <i class="fa fa-table"></i>&nbsp;&nbsp;Top Articles</span>
-            </div>
-            <div class="card-body" id="queryResults">
 
-            </div>
-        </div>
+
     </div>
 
 
